<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.telegrambot</groupId>
  <artifactId>InfoBot</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>InfoBot</name>
  <properties>
      <maven.compiler.source>17</maven.compiler.source>
      <maven.compiler.target>17</maven.compiler.target>
  </properties>
  <url>http://maven.apache.org</url>
  <dependencies>
      <!-- Telegram Java Bot API -->
      <dependency>
          <groupId>org.telegram</groupId>
          <artifactId>telegrambots</artifactId>
          <version>6.7.0</version>
      </dependency>
      
      <dependency>
          <groupId>org.telegram</groupId>
          <artifactId>telegrambots-spring-boot-starter</artifactId>
          <version>6.7.0</version>
      </dependency>
      <!-- Google API Client -->
      <dependency>
          <groupId>com.google.api-client</groupId>
          <artifactId>google-api-client</artifactId>
          <version>2.5.0</version>
      </dependency>
      
      <dependency>
          <groupId>com.google.oauth-client</groupId>
          <artifactId>google-oauth-client-jetty</artifactId>
          <version>1.34.1</version>
      </dependency>
      
      <dependency>
          <groupId>com.google.apis</groupId>
          <artifactId>google-api-services-sheets</artifactId>
          <version>v4-rev20230815-2.0.0</version>
      </dependency>
      
      <dependency>
          <groupId>com.google.http-client</groupId>
          <artifactId>google-http-client-jackson2</artifactId>
          <version>1.41.8</version>
      </dependency>
      
  </dependencies>
  <build>
      <plugins>
          <!-- Плагин для сборки jar с зависимостями -->
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-assembly-plugin</artifactId>
              <version>3.6.0</version>
              <configuration>
                  <archive>
                      <manifest>
                          <mainClass>com.telegrambot.App</mainClass>
                      </manifest>
                  </archive>
                  <descriptorRefs>
                      <descriptorRef>jar-with-dependencies</descriptorRef>
                  </descriptorRefs>
              </configuration>
              <executions>
                  <execution>
                      <id>make-assembly</id>
                      <phase>package</phase>
                      <goals>
                          <goal>single</goal>
                      </goals>
                  </execution>
              </executions>
          </plugin>
      </plugins>
  </build>
</project>
